--- a/index.html
+++ b/index.html
@@ -1,221 +1,152 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>
-            Inicio - Coca Cola
-        </title>
-        <link rel="shortcut icon" href="img/favicon.png">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="style.css">
-        <script src="https://kit.fontawesome.com/16fa95353c.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <header>
-            <div class="container ">
-                <a href="index.html">
-                    <img src="img/logo.svg" class="logo">
-                </a>
-                <nav>
-                    <a href="#inicio">Inicio</a>
-                    <a href="nosotros.html">Nosotros</a>
-                    <a href="#servicios">Servicios</a>
-                    <a href="#galeria">Galería</a>
-                    <a href="#contactenos">Contáctenos</a>
-                </nav>
-                <a href="#" class="hamb"><i class="fa-solid fa-bars"></i></a>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Inicio - ECO-GYM</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <header>
+        <div class="container ">
+            <a href="index.html">
+                <img src="img/logo.svg" class="logo">
+            </a>
+            <nav>
+                <a href="#inicio">Inicio</a>
+                <a href="nosotros.html">Nosotros</a>
+                <a href="#servicios">Suscripciones</a>
+                <a href="#galeria">Productos</a>
+                <a href="#contactenos">Contáctenos</a>
+            </nav>
+            <a href="#" class="hamb"><i class="fa-solid fa-bars"></i></a>
+        </div>
+    </header>
+
+    <main>
+        <section id="inicio">
+            <img src="img/logo.jpeg">
+            <div class="bloque-inicio">
+                <br>
+                <a href="#nosotros" class="boton boton-rojo">Ver más</a>
             </div>
-        </header>
-        <main>
-            <section id="inicio">
-                <img src="img/bannerprincipal.jpg">
-                <div class="bloque-inicio">
-                    <h1>Bienvenidos a Coca Cola</h1>
-                    <p>
-                        Destapa la felicidad.
-                    </p>
-                    <a href="#nosotros" class="boton boton-rojo">Ver más</a>
-                </div>
-            </section>
-            <section id="nosotros" class="seccion">
-                <div class="container">
-                    <p> Coca-Cola Company es una corporación multinacional dedicada a la elaboración de bebidas. 
-                    Con sede en Atlanta, el principal producto es el refresco más consumido del mundo: la Coca-Cola. 
-                    Está considerada como una de las mayores corporaciones estadounidenses.</p>
-                </div>
-            </section>
-            <section id="servicios" class="seccion">
-                <div class="container">
-                    <div class="row">
-                        <div class="columna columna-33 columna-mobile-100">
-                            <div class="bloque-servicio">
-                                <div class="bloque-img-servicio cuadrado-perfecto">
-                                    <img src="img/servicio1.jpg">
-                                </div>
-                                <div class="bloque-contenido-servicio">
-                                    <h3>Servicio 1</h3>
-                                    <p>
-                                        Aca puedes observar la variedad de bebidas que Ofrecemos
-                                    </p>
-                                    <a href="servicio1.html" class="boton boton-blanco">Ver más</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="columna columna-33 columna-mobile-100">
-                            <div class="bloque-servicio">
-                                 <div class="bloque-img-servicio cuadrado-perfecto">
-                                    <img src="img/servicio2.jpg">
-                                </div>
-                                <div class="bloque-contenido-servicio">
-                                    <h3>Servicio 2</h3>
-                                    <p>
-                                        Proximamente..
-                                    </p>
-                                    <a href="#" class="boton boton-blanco">Ver más</a>
-                                    </div>
-                            </div>
-                        </div>
-                    <div class="columna columna-33 columna-mobile-100">
-                            <div class="bloque-servicio">
-                                 <div class="bloque-img-servicio cuadrado-perfecto">
-                                      <img src="img/servicio3.jpg">
-                                </div>
-                                <div class="bloque-contenido-servicio">
-                                    <h3>Servicio 3</h3>
-                                    <p>
-                                        Proximamente..
-                                    </p>
-                                    <a href="#" class="boton boton-blanco">Ver más</a>
-                                </div>
-                            </div>
-                    </div>
-                    </div>
-                </div>
-            </section>
-            <section id="galeria">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class=" columna-33 columna-mobile-50">
-                            <div class="cuadrado-perfecto">
-                                <img src="img/servicio1.jpg">
-                                <h4>Imagen1</h4>
-                            </div>
-                        </div>
-                        <div class=" columna-33 columna-mobile-50">
-                            <div class="cuadrado-perfecto">
-                                <img src="img/servicio2.jpg">
-                                <h4>Imagen2</h4>
-                            </div>
-                        </div>
-                        <div class=" columna-33 columna-mobile-50">
-                            <div class="cuadrado-perfecto">
-                                <img src="img/servicio3.jpg">
-                                <h4>Imagen3</h4>
-                            </div>
-                         </div>
-                        <div class=" columna-33 columna-mobile-50">
-                            <div class="cuadrado-perfecto">
-                                <img src="img/servicio4.jpg">
-                                <h4>Imagen4</h4>
-                            </div>
-                         </div>
-                         <div class=" columna-33 columna-mobile-50">
-                            <div class="cuadrado-perfecto">
-                                <img src="img/servicio5.jpg">
-                                <h4>Imagen5</h4>
-                            </div>
-                         </div>
-                        <div class=" columna-33 columna-mobile-50">
-                            <div class="cuadrado-perfecto">
-                                <img src="img/servicio6.jpg">
-                                <h4>Imagen6</h4>
-                            </div>
-                         </div>
-                    </div>
-                </div>
-            </section>
-            <section id="contactenos" class="seccion">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d123536.6549420951!2d-90.57496311774904!3d14.626371680915558!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8589a180655c3345%3A0x4a72c7815b867b25!2sCdad.%20de%20Guatemala!5e0!3m2!1ses-419!2sgt!4v1689086862758!5m2!1ses-419!2sgt" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="columna columna-41 columna-mobile-100 empujar-58 empujar-mobile-0 sinpadding-mobile">
-                            <form action="" method="post">
-                                <div class="form-block">
-                                    <input type="text" name="nombre" class="form-block" placeholder="Nombre">
-                                </div>
-                                <div class="form-block">
-                                    <input type="email" name="email" class="form-block" placeholder="Email">
-                                </div>
-                                <div class="form-block">
-                                    <textarea name="mensaje" placeholder="Mensaje"></textarea>
-                                </div>
-                                <div class="form-block bloque-ultimo">
-                                    <input type="submit" class="boton boton-negro" value="Enviar">
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </main>
-        <footer>
+        </section>
+        <section id="nosotros" class="seccion">
+            <div class="container">
+                <p> Estamos empeñados en brindar un equipo de gimnasio de primera calidad para que las personas puedan realizar sus rutinas sin ningún problema.</p>
+            </div>
+        </section>
+        <section id="servicios" class="seccion">
             <div class="container">
                 <div class="row">
-                    <div class="columna columna-25 columna-mobile-100">
-                        <img src="img/logo-blanco.png" class="logo-footer">
-                        <p>
-                            Destapa la felicidad y comparte en familia.
-                        </p>
+                    <div class="columna columna-33 columna-mobile-100">
+                        <div class="bloque-servicio">
+                            <div class="bloque-img-servicio cuadrado-perfecto">
+                                <img src="img/Equipo.jpeg">
+                            </div>
+                            <div class="bloque-contenido-servicio">
+                                <h3>Equipo</h3>
+                                <p>
+                                    Equipos eco-amigables y asequibles
+                                </p>
+                                <a href="servicio1.html" class="boton boton-blanco">Ver más</a>
+                            </div>
+                        </div>
                     </div>
-                    <div class="columna columna-25 columna-mobile-100">
-                        <h3>
-                            Temas relacionados
-                        </h3>
-                        <ul>
-                            <li><a href="#">Tema 1</a></li>
-                            <li><a href="#">Tema 2</a></li>
-                            <li><a href="#">Tema 3</a></li>
-                        </ul>
+                    <div class="columna columna-33 columna-mobile-100">
+                        <div class="bloque-servicio">
+                             <div class="bloque-img-servicio cuadrado-perfecto">
+                                <img src="img/Mamado.jpeg">
+                            </div>
+                            <div class="bloque-contenido-servicio">
+                                <h3>Entrenamiento</h3>
+                                <p>
+                                    Sesiones de ejercicio personalizadas
+                                </p>
+                                <a href="#" class="boton boton-blanco">Ver más</a>
+                                </div>
+                        </div>
                     </div>
-                    <div class="columna columna-25 columna-mobile-100">
-                        <h3>
-                            Datos de contacto
-                        </h3>
-                        <ul>
-                            <li>carlitoscabrera867@gmail.com</li>
-                            <li>+502 4152 9623</li>
-                            <li>7ma. Avenida 11-45 zona 18</li>
-                        </ul>
+                <div class="columna columna-33 columna-mobile-100">
+                        <div class="bloque-servicio">
+                             <div class="bloque-img-servicio cuadrado-perfecto">
+                                  <img src="img/Nutrición.jpeg">
+                            </div>
+                            <div class="bloque-contenido-servicio">
+                                <h3>Nutrición</h3>
+                                <p>
+                                    Programa nutricional para alcanzar tus objetivos
+                                </p>
+                                <a href="#" class="boton boton-blanco">Ver más</a>
+                            </div>
+                        </div>
+                </div>
+                </div>
+            </div>
+        </section>
+        <section id="galeria">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class=" columna-33 columna-mobile-50">
+                        <div class="cuadrado-perfecto">
+                            <img src="img/servicio1.jpeg">
+                        </div>
                     </div>
-                    <div class="columna columna-25 columna-mobile-100">
-                        <h3>
-                            Redes Sociales
-                        </h3>
-                        <ul class="redes">
-                            <li>
-                                <a href="https://www.facebook.com/cocacolaguatemala/?locale=es_LA">
-                                    <i class="fa-brands fa-square-facebook"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://twitter.com/cocacola_gt?lang=es">
-                                    <i class="fa-brands fa-square-twitter"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://instagram.com/cocacola_guatemala?igshid=MzRlODBiNWFlZA==">
-                                    <i class="fa-brands fa-square-instagram"></i>
-                                </a>
-                            </li>
-                        </ul>
+                    <div class=" columna-33 columna-mobile-50">
+                        <div class="cuadrado-perfecto">
+                            <img src="img/servicio2.jpeg">
+                        </div>
+                    </div>
+                    <div class=" columna-33 columna-mobile-50">
+                        <div class="cuadrado-perfecto">
+                            <img src="img/servicio3.jpeg">
+                        </div>
+                     </div>
+                    <div class=" columna-33 columna-mobile-50">
+                        <div class="cuadrado-perfecto">
+                            <img src="img/servicio4.jpeg">
+                        </div>
+                     </div>
+                     <div class=" columna-33 columna-mobile-50">
+                        <div class="cuadrado-perfecto">
+                            <img src="img/servicio5.jpeg">
+                        </div>
+                     </div>
+                    <div class=" columna-33 columna-mobile-50">
+                        <div class="cuadrado-perfecto">
+                            <img src="img/servicio6.jpeg">
+                        </div>
+                     </div>
+                </div>
+            </div>
+        </section>
+        <section id="contactenos" class="seccion">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d123536.6549420951!2d-90.57496311774904!3d14.626371680915558!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8589a180655c3345%3A0x4a72c7815b867b25!2sCdad.%20de%20Guatemala!5e0!3m2!1ses-419!2sgt!4v1689086862758!5m2!1ses-419!2sgt" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="columna columna-41 columna-mobile-100 empujar-58 empujar-mobile-0 sinpadding-mobile">
+                        <form action="" method="post">
+                            <div class="form-block">
+                                <input type="text" name="nombre" class="form-block" placeholder="Nombre">
+                            </div>
+                            <div class="form-block">
+                                <input type="email" name="email" class="form-block" placeholder="Email">
+                            </div>
+                            <div class="form-block">
+                                <textarea name="mensaje" placeholder="Mensaje"></textarea>
+                            </div>
+                            <div class="form-block bloque-ultimo">
+                                <input type="submit" class="boton boton-negro" value="Enviar">
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
-            <div class="barra-footer">
-                &copy; Derechos Reservados - 2023
-            </div>
-        </footer>
-    </body>
+        </section>
+    </main>
+</body>
+
 </html>
